--- a/vue-demos/src/views/juejin-notes/articles/20.md
+++ b/vue-demos/src/views/juejin-notes/articles/20.md
@@ -1,10 +1,30 @@
-# vue打包报错
+# 配置 powershell与startship
 
-![image.png](https://p1-juejin.byteimg.com/tos-cn-i-k3u1fbpfcp/da978c4ea64e4288b7a97f638d95cf75~tplv-k3u1fbpfcp-watermark.image?)
+> 前置条件：电脑已安装powershell(微软商店搜索安装)和vscode(自己想办法)
 
-https://github.com/vuejs/language-tools/issues/4484
+# powershell配置文件
 
-解决方案：
-升级vue-tsc依赖
+装了vscode之后，在终端运行以下命令直接打开powershell的配置文件
 
-![328fadcf7c6012ed8d20844a8c72838.png](https://p9-juejin.byteimg.com/tos-cn-i-k3u1fbpfcp/3d24ae2f59024695a392c9e37891e822~tplv-k3u1fbpfcp-watermark.image?)
+```powershell
+code $profile
+```
+
+打开后粘贴以下代码
+
+```ps1
+Invoke-Expression (&starship init powershell);
+fnm env --use-on-cd --shell power-shell | Out-String | Invoke-Expression;
+```
+
+# starship 配置控制台显示全路径
+
+下面这个是在startship的配置文件里面输入的,路径是~/.config/startship.toml
+
+**两个配置缺一不可！**
+
+```toml
+[directory]
+truncation_length = 100 # 配置显示父目录最大层级数
+truncate_to_repo = false # 配置是否只截断到当前git仓库所在父目录下
+```
